EM/LDA and LeetCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        "./MeachinLearning",
+        "./BasicAlg",
         "-p",
         "test_*.py"
     ],
